# container-desktop-entries

./: Cargo.toml  README.md  justfile
.rpm/: container-desktop-entries-client.spec  container-desktop-entries.spec
docs/: _config.yml  index.md
src/: client.rs  container_type.rs  desktop_entry.rs  desktop_entry_daemon.rs  main.rs  server.rs
systemd/: container-desktop-entries.service
