[package]
name = "container-desktop-entries"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
freedesktop-desktop-entry = "0.5.2"
freedesktop-icon-lookup = "0.1.3"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
walkdir = "2.5.0"
zbus = "4.1.2"
